--- a/Views/add_new_task.cshtml
+++ b/Views/add_new_task.cshtml
@@ -1,6 +1,7 @@
 <h1>To Do List</h1>
-<form action="/task_added" method="post">
-  <label for="new-task">Add a new task</label>
-  <input id="new-task" name="new-task" type="text">
-  <button type="submit">Submit</button>
+<h3>Add a new task:</h3>
+<form action='/tasks' method='post'>
+  <label for='new-task'>Task Description</label>
+  <input id='new-task' name='new-task' type='text'>
+  <button type='submit'>Add task</button>
 </form>
