--- a/Views/view_all_tasks.cshtml
+++ b/Views/view_all_tasks.cshtml
@@ -1,11 +1,11 @@
 <h1>To Do List</h1>
 <ul>
-  @foreach(string task in Model)
+  @foreach (var task in Model)
   {
-    <li>@task</li>
+    <li><a href='/tasks/@task.GetId()'>@task.GetDescription()</a></li>
   }
 </ul>
-<p><a href="/">Add another task</a></p>
-<form action="tasks_cleared" method="post">
-  <button type="submit" name="button">Clear All Tasks</button>
-</form>
+@* <h1>@Model.GetDescription()</h1> *@
+<a href='/tasks/new'>Add another task</a>
+<a href='/tasks'>View all tasks</a>
+<a href='/tasks/new'>Add new task</a>
