--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,2 +1,3 @@
 <h1>To Do List</h1>
-<a href='/tasks/new'>Add a new task</a>
+<h3><a href='/categories'>View Categories</a></h3>
+<h3><a href='/categories/new'>Add a new Category</a></h3>
