--- a/Views/category_tasks_form.cshtml
+++ b/Views/category_tasks_form.cshtml
@@ -1,6 +1,6 @@
 <h1>Add a new task to @Model["category"].GetName()</h1>
 <form action="/tasks" method="post">
-  <input id="category-id" name="category-id" type="hidden" value='@Model["category"].GetId'>
+  <input id="category-id" name="category-id" type="hidden" value='@Model["category"].GetId()'>
   <label for="task-description">Task Description</label>
   <input id="task-description" name="task-description" type="text">
   <button type="submit">Add Task</button>
